# curio

./: .gitignore  AUTHENTICATION.md  BOOTSTRAP.md  CLI.md  DOSSIER.md  JSON-PAYLOAD.md  LLM-CALLER.md  Makefile  PIPELINE-TODO.md  PIPELINE.md  README.md  SCHEMA.md  SMOKE-TESTS.md  TEXTIFY.md  TRANSLATE.md  USAGE.md  V2-PLAN.md  config.example.codex_cli.json  config.example.google_document_ai.json  config.example.openai_api.json  pyproject.toml
bug-reports/: BUG-REPORT-001.md
reports/: README.md
schemas/: evaluation_payload.schema.json  llm_request.schema.json  llm_response.schema.json  textify_request.schema.json  textify_response.schema.json  translation_request.schema.json  translation_response.schema.json
specs/: AGENTIC-MEMORY.md  CLI.md  DOSSIER.md  JSON-PAYLOAD.md  LABELING-SCHEMES.md  LLM-CALLER.md  PIPELINE.md  ROADMAP.md  SCHEMA.md  TRANSLATE.md
tests/: conftest.py  live_smoke_evaluator.py  live_smoke_helpers.py  test_cli.py  test_codex_cli.py  test_config.py  test_google_api.py  test_google_document_ai.py  test_live_smoke_evaluator.py  test_live_smoke_opt_in.py  test_llm_auth.py  test_llm_caller.py  test_llm_local_files.py  test_llm_provider_foundation.py  test_main.py  test_openai_api.py  test_package.py  test_pipeline.py  test_pipeline_google_drive.py  test_pipeline_google_sheets.py  test_pipeline_integration.py  test_pipeline_processors.py  test_pipeline_scheduler.py  test_provider_factory.py  test_schemas.py  test_textify.py  test_textify_adapter.py  test_textify_live_smoke.py  test_textify_smoke.py  test_textify_smoke_evaluator.py  test_textify_validation.py  test_translate.py  test_translate_adapter.py  test_translate_live_smoke.py  test_translate_smoke.py  test_translate_validation.py  textify_smoke_evaluator.py  textify_smoke_helpers.py
todos/: DOSSIER-TODO.md  PIPELINE-TODO.md  (+3 more)
(+51 files in other folders)
